--- a/cities.html
+++ b/cities.html
@@ -27,6 +27,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto   (4,000,000)</li>
+    <li>Winnepeg (500,000)</li>
   </ol>
 
 </body>
