--- a/cities.html
+++ b/cities.html
@@ -29,6 +29,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto   (4,000,000)</li>
     <li>Winnepeg (500,000)</li>
+    <li>Regina (200,000)</li>
   </ol>
 
 </body>
